# rtc

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
assets/blender/: Mech_Room.blend  cornell_box.blend  cornell_box.blend1
assets/brs_xml/: bottles.xml  brs.xsd  cage_bars.xml  coffee_tables.xml  kitchen.xml  room.xml  scene4.xml  scene5.xml  shperes.xml  simple objects.xml  sun_room.xml
assets/collada/: Mech_Room.dae  cornell_box.dae
core/: CMakeLists.txt  readme.txt
core/include/: bitmap.hpp  rtc_log.hpp  scoped_timer.hpp  stream_operators.hpp  utility.hpp
core/source/: bitmap.cpp  rtc_log.cpp
data_model/: CMakeLists.txt
data_model/include/: aligned_model.hpp  camera.hpp  color.hpp  intersection.hpp  light.hpp  optical_camera_plane.hpp  scene_model.hpp  surface_material.hpp  triangle3d.hpp
data_model/source/: intersection.cpp  optical_camera_plane.cpp
data_model/ut/: optical_camera_plane_ut.cpp
edu/: callgrind.800x600.room.out  info  rt_serivice.patch
examples/: api_design.cpp  readme.txt
graphics_view/: CMakeLists.txt
graphics_view/include/: graphics_view.hpp
graphics_view/ut/: graphics_view_ut.cpp
input_model/: CMakeLists.txt
input_model/include/: blend.hpp  brs.hpp  collada_format.hpp
input_model/source/: blend.cpp  brs.cpp  collada_format.cpp
input_model/ut/: blender_ut.cpp  brs_ut.cpp  collada_format_ut.cpp
kd_tree/: CMakeLists.txt
kd_tree/include/: bounding_edge.hpp  kd_tree.hpp  kd_tree_iterator.hpp  kd_tree_node.hpp  kdtree_rt.hpp
kd_tree/source/: kd_tree.cpp  kd_tree_iterator.cpp
kd_tree/ut/: .kdtree_data_ut.cpp.swp  kd_tree_ut.cpp
math/: CMakeLists.txt
math/include/: bounding_box.hpp  fast_pow.hpp  float_compare.hpp  math_axis.hpp  math_plane.hpp  math_point.hpp  math_ray.hpp  math_vector.hpp  point_in_triangle_test.hpp  ray_box_intersection_test.hpp
math/source/: bounding_box.cpp  point_in_triangle_test.cpp  ray_box_intersection_test.cpp
math/ut/: fast_pow_ut.cpp  float_compare_ut.cpp  math_plane_ut.cpp  point_in_triangle_test_ut.cpp  ray_box_intersection_test_ut.cpp  vector3d_ut.cpp
ray_tracer/: CMakeLists.txt
ray_tracer/include/: begin_end_concept.hpp  ray_tracer.hpp
render_engine/: CMakeLists.txt
render_engine/include/: .reder_engine.hpp.swp  render_engine.hpp
render_engine/ut/: render_engine_ut.cpp
rt_algorithms/: CMakeLists.txt
rt_algorithms/include/: backward_al.hpp  distributed_ray_tracing.hpp
rt_algorithms/ut/: backward_al_ut.cpp
rt_service/: CMakeLists.txt  readme.txt
rt_service/include/: joinable_rt.hpp  rt_service.hpp
rt_service/ut/: rt_service_ut.cpp
